# simple_kite_benchmark

./: CMakeLists.txt  LICENSE  README.md  acado_codegen.cpp  acado_node.cpp  acado_node2.cpp  acado_node2.hpp  psopt_data.txt  psopt_node.cpp
